--- a/web_app/templates/bootstrap_5.html
+++ b/web_app/templates/bootstrap_5.html
@@ -43,6 +43,7 @@
         ('/about', 'about', 'About'),
         ('/hello', 'hello', 'Hello'),
         ('/stocks/form', 'stocks_form', 'Stocks Form'),
+        ('/unemployment/dashboard', 'unemployment_dashboard', 'Unemployment Dashboard')
     ] -%}
     {% set active_page = active_page|default('home') -%}
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
