Products Page Added

--- a/web_app/templates/bootstrap_5.html
+++ b/web_app/templates/bootstrap_5.html
@@ -42,6 +42,7 @@
     {% set nav_links = [
         ('/about', 'about', 'About'),
         ('/hello', 'hello', 'Hello'),
+        ('/products', 'products', 'Products'),
         ('/stocks/form', 'stocks_form', 'Stocks Form'),
         ('/unemployment/dashboard', 'unemployment_dashboard', 'Unemployment Dashboard')
     ] -%}
